--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -30,7 +30,7 @@
 
 </style>
 
-<div style="background-image: url(/assets/tracteur4.jpg); background-size: cover;background-position: center; height:100vh;">
+<div style="background-image: url(<%= asset_path('tracteur4.jpg') %>); background-size: cover;background-position: center; height:100vh;">
   <div class="main-wrapper  account-wrapper">
     <div class="account-page">
       <div class="account-center">
