--- a/app/views/layouts/dashboard/_sidebar.html.erb
+++ b/app/views/layouts/dashboard/_sidebar.html.erb
@@ -11,7 +11,7 @@
                             <a href="liste_clients.html"><i class="fa fa-user-o"></i> <span>Tous les clients</span></a>
                         </li>
                         <li>
-                            <a href="liste_demande.html"><i class="fa fa-calendar"></i> <span>Liste des demandes</span></a>
+                            <a href="<%=service_requests_path%>"><i class="fa fa-calendar"></i> <span>Liste des demandes</span></a>
                         </li>
                         <li>
                             <a href="remboursement_form.html"><i class="fa fa-calendar-check-o"></i> <span>New remboursement</span></a>
@@ -23,10 +23,13 @@
                             <a href="bilan_client.html"><i class="fa fa-calendar-check-o"></i> <span>Bilan Client</span></a>
                         </li>
                         <li>
-                            <a href="variable_indice_form.html"><i class="fa fa-calendar-check-o"></i> <span>Indice de calcule</span></a>
+                            <a href="<%=herbicides_path%>"><i class="fa fa-calendar-check-o"></i> <span>Les herbicides</span></a>
                         </li>
                         <li>
-                            <a href="new_demande.html" style="font-weight: bolder;" class="text-warning"><i class="fa fa-hospital-o"></i> <span>Nouvelle demande</span></a>
+                            <a href="<%=indice_setting_path%>"><i class="fa fa-calendar-check-o"></i> <span>Indice de calcule</span></a>
+                        </li>
+                        <li>
+                            <a href="<%=new_service_request_path%>" style="font-weight: bolder;" class="text-warning"><i class="fa fa-hospital-o"></i> <span>Nouvelle demande</span></a>
                         </li>
                     </ul>
             
