--- a/app/views/users/complete_profile.html.erb
+++ b/app/views/users/complete_profile.html.erb
@@ -1,5 +1,5 @@
 <div class="main-wrapper  account-wrapper">
-    <div class="content">
+    <div>
         <div class="row mb-4">
             <div class="col-sm-12 text-center">
                 <h2 class="text-dark">BONJOUR M/Mme <%=current_user.nom%> <%=current_user.prenom%>.</h2>
