--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,10 @@
 body {
     background-color: #888;
   }
+.btn-cdae{
+  background-color: #FF7B02!important;
+  color: white!important;
+}
+.text-cdae{
+  color: #FF7B02 !important;
+}
