--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-turbo="false">
   <head>
-    <title>CliniqueRenaissanceDivine</title>
+    <title>CDAE-FIANCE</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +10,7 @@
     <%= javascript_importmap_tags %>
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
 
 <style>
 /* Preloader container */
@@ -75,6 +76,7 @@
 
 <div class="sidebar-overlay" data-reff=""></div>
  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
  <script>
     document.addEventListener("DOMContentLoaded", () => {
   // Masquer le preloader après le chargement complet
