--- a/app/views/layouts/dashboard/_footer.html.erb
+++ b/app/views/layouts/dashboard/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6">
-                2024 © Clinique renaissance divine
+                2024 © CDAE-FINANCE
             </div>
             <div class="col-sm-6">
                 <div class="text-sm-end d-none d-sm-block">
