--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -15,7 +15,7 @@
           <tr>
             <th>#</th>
             <th>Campagne</th>
-            <th>User</th>
+            <th>Client</th>
             <th>Superficie (Ha)</th>
             <th>Herbicide</th>
             <th>Quantité (Litre)</th>
