--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -96,7 +96,8 @@
                                   data-transaction-amount="<%=  @service_request_amount %>"
                                   data-transaction-description="Rendez-vous"
                                   data-customer-email = "<%= current_user.email if current_user.present?%>"
-                                  data-customer-lastname = "<%= current_user.nom if current_user.nom.present? %>  <%= current_user.prenom if current_user.prenom.present? %>"
+                                  data-customer-lastname = "<%= current_user.nom if current_user.nom %>"
+                                  data-customer-firstname = "<%= current_user.prenom if current_user.prenom%>"
                                   data-currency-iso="XOF"
                                   data-widget-description=""
                                   data-widget-image=""
