--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -113,10 +113,7 @@
                     <!-- bank transfer info -->
                     <div id="net-banking" class="tab-pane fade pt-3">
                         <div class="form-group "> <label for="Select Your Bank">
-                                <h6>Preuve de payement</h6>
-                                <form action="">
-                                <input type="file">
-                               </form>
+                                <p><strong><i class="fas fa-money-check-alt"></i> Kg de soja a rembourser :</strong> <%= @service_request.kg_paye  %> Fcfa</p>
                                <hr>
                         <div class="form-group text-center">
                             <p> <button type="button" class="btn btn-primary "><i class="fas fa-mobile-alt mr-2"></i> Envoyer preuve de payement</button> </p>
