--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -14,6 +14,7 @@
         <thead class="thead-light">
           <tr>
             <th>#</th>
+            <th>ID</th>
             <th>Campagne</th>
             <th>Client</th>
             <th>Superficie (Ha)</th>
@@ -30,6 +31,7 @@
           <% @service_requests.each_with_index do |service_request, index| %>
             <tr>
               <td><%= index + 1 %></td>
+              <td><%= service_request.id %></td>
               <td><%= service_request.created_at.strftime("%Y") %></td>
               <td><%= service_request.user.nom %> <%= service_request.user.prenom %></td>
               <td><%= service_request.superficie%></td>
