--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -983,7 +983,7 @@ textarea.form-control {
 	position: relative;
 	z-index: 99;
     display: flex;
-	justify-content:space-between;
+	justify-content:end;
 	margin-top: 3px;
     // justify-content: flex-end;
 }
