--- a/app/views/dashboard/list_user.html.erb
+++ b/app/views/dashboard/list_user.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container mt-2">
+<div class="container mt-2 mb-5">
   <div class="row mb-4">
     <div class="col text-end">
        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newUserModal">
@@ -43,13 +43,13 @@
                     <i class="fas fa-cogs"></i> 
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="actionsDropdown<%= user.id %>">
-                    <li><%= link_to new_service_request_path, class: 'dropdown-item' do %>
+                    <li><%= link_to user_path(user), class: 'dropdown-item' do %>
                         <i class="fas fa-eye"></i> Voir
                       <% end %></li>
-                    <li><%= link_to new_service_request_path, class: 'dropdown-item' do %>
+                    <li><%= link_to edit_user_path(user), class: 'dropdown-item' do %>
                         <i class="fas fa-edit"></i> Modifier
                       <% end %></li>
-                    <li><%= link_to new_service_request_path, class: 'dropdown-item text-danger' do %>
+                    <li><%= link_to user_path(user), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet utilisateur ?' }, class: 'dropdown-item text-danger' do %>
                         <i class="fas fa-trash-alt"></i> Supprimer
                       <% end %></li>
                   </ul>
@@ -61,6 +61,14 @@
       </table>
     </div>
   </div>
+  <div class="d-flex mt-4" style="justify-content:space-between;">
+      <div>
+        <%= page_entries_info  @users, entry_name: "Utilisateurs" %>
+      </div>
+      <div>
+        <%= paginate  @users %>
+      </div>
+    </div>
 </div>
 
 <!-- Modal pour ajouter un nouvel utilisateur -->
