--- a/app/views/executions/index.html.erb
+++ b/app/views/executions/index.html.erb
@@ -50,5 +50,13 @@
       </table>
         </div>
   </div>
+   <div class="d-flex mt-4 mb-5" style="justify-content:space-between;">
+    <div>
+      <%= page_entries_info @executions, entry_name: "Travaux effectués" %>
+    </div>
+    <div>
+      <%= paginate @executions %>
+    </div>
+  </div>
 </div>
 
