--- a/app/views/layouts/dashboard/_header.html.erb
+++ b/app/views/layouts/dashboard/_header.html.erb
@@ -8,128 +8,34 @@
     </div>
     <a id="toggle_btn" href="javascript:void(0);" style="color:#073861"><i class="fa fa-bars"></i></a>
     <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"><i class="fa fa-bars"></i></a>
-    <div class="dropdown mobile-user-menu float-right me-3">
+    
+        <ul class="nav user-menu float-right respon__none">
+
+            <li class="nav-item dropdown has-arrow show">
+                <a href="#" class="dropdown-toggle nav-link user-link text-dark" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="user-img">
+                            <%=image_tag('user.jpg', class:"rounded-circle", width:"24")%>
+                    </span>
+                    <span><%=current_user.nom%></span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="<%=dashboard_profile_path%>">Mon Profile</a>
+                    <a class="dropdown-item" href="<%=edit_user_path(current_user)%>">Modifier Profile</a>
+                    <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                </div>
+            </li>
+        </ul>
+
+    <div class="dropdown mobile-user-menu float-right">
         <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="user-img">
                     <%=image_tag('user.jpg', class:"rounded-circle", width:"24")%>
-                <span class="status online" style="bottom:10px;"></span>
             </span>
         </a>
         <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">Mon Profile</a>
-            <a class="dropdown-item" href="#">Modifier Profile</a>
+            <a class="dropdown-item" href="<%=dashboard_profile_path%>">Mon Profile</a>
+            <a class="dropdown-item" href="<%=edit_user_path(current_user)%>">Modifier Profile</a>
             <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
     </div>
-    <ul class="nav user-menu float-right">
-        <ul class="search-box">
-        <li class="nav-item">
-            <div class="searchbar">
-                <input class="search_input" type="text" name="" placeholder="Recherche...">
-                <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
-            </div>
-        </li>
-        </ul>
-        <ul style="display:flex" class=" respon__none">
-        <li class="nav-item dropdown d-none d-sm-block">
-            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><i class="fa fa-envelope"></i> <span class="badge badge-pill bg-danger float-right">0</span></a>
-            <div class="dropdown-menu notifications">
-                <div class="topnav-dropdown-header">
-                    <span>Notifications</span>
-                </div>
-                <div class="drop-scroll">
-                    <ul class="notification-list">
-                        <li class="notification-message">
-                            <a href="activities.html">
-                                <div class="media">
-                                    <span class="avatar">
-                                        <%=image_tag('user.jpg', class:"img-fluid")%>
-                                    </span>
-                                    <div class="media-body">
-                                        <p class="noti-details"><span class="noti-title">John Doe</span> added new task <span class="noti-title">Patient appointment booking</span></p>
-                                        <p class="noti-time"><span class="notification-time">4 mins ago</span></p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="notification-message">
-                            <a href="activities.html">
-                                <div class="media">
-                                    <span class="avatar">V</span>
-                                    <div class="media-body">
-                                        <p class="noti-details"><span class="noti-title">Tarah Shropshire</span> changed the task name <span class="noti-title">Appointment booking with payment gateway</span></p>
-                                        <p class="noti-time"><span class="notification-time">6 mins ago</span></p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="notification-message">
-                            <a href="activities.html">
-                                <div class="media">
-                                    <span class="avatar">L</span>
-                                    <div class="media-body">
-                                        <p class="noti-details"><span class="noti-title">Misty Tison</span> added <span class="noti-title">Domenic Houston</span> and <span class="noti-title">Claire Mapes</span> to project <span class="noti-title">Doctor available module</span></p>
-                                        <p class="noti-time"><span class="notification-time">8 mins ago</span></p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="notification-message">
-                            <a href="activities.html">
-                                <div class="media">
-                                    <span class="avatar">G</span>
-                                    <div class="media-body">
-                                        <p class="noti-details"><span class="noti-title">Rolland Webber</span> completed task <span class="noti-title">Patient and Doctor video conferencing</span></p>
-                                        <p class="noti-time"><span class="notification-time">12 mins ago</span></p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="notification-message">
-                            <a href="activities.html">
-                                <div class="media">
-                                    <span class="avatar">V</span>
-                                    <div class="media-body">
-                                        <p class="noti-details"><span class="noti-title">Bernardo Galaviz</span> added new task <span class="noti-title">Private chat module</span></p>
-                                        <p class="noti-time"><span class="notification-time">2 days ago</span></p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="topnav-dropdown-footer">
-                    <a href="activities.html">View all Notifications</a>
-                </div>
-            </div>
-        </li>
-        <li class="nav-item dropdown d-none d-sm-block">
-            <a href="javascript:void(0);" id="open_msg_box" class="hasnotifications nav-link"><i class="fa fa-comment"></i>  <span class="badge badge-pill bg-danger float-right">0</span></a>
-        </li>
-
-        <li class="nav-item dropdown has-arrow show">
-        <a href="#" class="dropdown-toggle nav-link user-link" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="user-img">
-                    <%=image_tag('user.jpg', class:"rounded-circle", width:"24")%>
-                <span class="status online" style="bottom: 0px;"></span>
-            </span>
-            <span><%=current_user.nom%></span>
-        </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">Mon Profile</a>
-                <a class="dropdown-item" href="#">Modifier Profile</a>
-                <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
-        </li>
-
-    <div class="dropdown mobile-user-menu float-right">
-        <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-        <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="profile.html">My Profile</a>
-            <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
-            <a class="dropdown-item" href="settings.html">Settings</a>
-            <a class="dropdown-item" href="login.html">Logout</a>
-        </div>
-    </div>
 </div>
-</ul>
