--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,35 +1,106 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+<style>
+    .img-thumbnail {
+  border: 3px solid #007bff;
+}
+.form-label {
+  font-weight: bold;
+}
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #004085;
+}
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+</style>
+<div class="container mt-5">
+  <div class="card shadow">
+    <div class="card-header bg-primary text-white">
+      <h4 class="mb-0">Modifier le Profil</h4>
+    </div>
+    <div class="card-body">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <div class="row">
+          <!-- Profile Image -->
+          <div class="col-md-3 text-center">
+            <div class="mb-3">
+              <%= image_tag "user.jpg", alt: "Image de profil", class: "img-thumbnail rounded-circle", style: "width: 150px; height: 150px;" %>
+            </div>
+          </div>
+          
+          <!-- Personal Information -->
+          <div class="col-md-9">
+            <div class="row">
+              <div class="col-md-6">
+                <%= f.label :nom, "Nom", class: "form-label" %>
+                <%= f.text_field :nom, class: "form-control", placeholder: "Entrez votre nom" %>
+              </div>
+              <div class="col-md-6">
+                <%= f.label :prenom, "Prénom", class: "form-label" %>
+                <%= f.text_field :prenom, class: "form-control", placeholder: "Entrez votre prénom" %>
+              </div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col-md-6">
+                <%= f.label :phone_number, "Numéro de Téléphone", class: "form-label" %>
+                <%= f.text_field :phone_number, class: "form-control", placeholder: "Entrez votre numéro de téléphone" %>
+              </div>
+              <div class="col-md-6">
+                <%= f.label :email, "Adresse Email", class: "form-label" %>
+                <%= f.email_field :email, class: "form-control", placeholder: "Entrez votre email" %>
+              </div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col-md-6">
+                <%= f.label :commune, "commune", class: "form-label" %>
+                <%= f.text_field :commune, class: "form-control", placeholder: "Entrez votre commune" %>
+              </div>
+              <div class="col-md-6">
+                <%= f.label :village, "Village", class: "form-label" %>
+                <%= f.text_field :village, class: "form-control", placeholder: "Entrez votre Village" %>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+
+        <hr>
+
+        <!-- Additional Information -->
+
+
+        <!-- Password Update -->
+        <div class="row">
+          <div class="col-md-6">
+            <%= f.label :password, "Nouveau Mot de Passe", class: "form-label" %>
+            <%= f.password_field :password, class: "form-control", placeholder: "Entrez un nouveau mot de passe" %>
+          </div>
+          <div class="col-md-6">
+            <%= f.label :password_confirmation, "Confirmez le Mot de Passe", class: "form-label" %>
+            <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirmez le nouveau mot de passe" %>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="text-end">
+          <%= f.submit "Mettre à Jour", class: "btn btn-primary" %>
+          <%= link_to "Retour", :back, class: "btn btn-secondary" %>
+          <%= button_to "Supprimer le compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr?", turbo_confirm: "Êtes-vous sûr?" }, class: "btn btn-danger", method: :delete %>
+        </div>
+      <% end %>
+    </div>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
