--- a/app/views/dashboard/bilan.html.erb
+++ b/app/views/dashboard/bilan.html.erb
@@ -30,7 +30,7 @@
             <th scope="col">Qte Soja remb</th>
             <th scope="col">Qte Soja rest</th>
             <th scope="col">Garantie</th>
-            <th scope="col">Valeur Qtité deduit (F)</th>
+            <th scope="col">Valeur majorée (F)</th>
             <th scope="col">Valeur remb (F)</th>
             <th scope="col">Dette (F)</th>
             <th scope="col">#</th>
